<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manual_joystick_listener</name>
  <version>0.0.0</version>
  <description>Simple joystick Twist listener</description>
  <maintainer email="your_email@example.com">Jan Holub</maintainer>
  <license>Apache-2.0</license>
  <export>
    <build_type>ament_python</build_type>
  </export>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>