<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>Handling_Service.Core</name>
  <version>1.0.0</version>
  <description>This package is part of Handling_Service microservice</description>
  <maintainer email="fxxholub@gmail.com">Jan Holub</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>